Add options to appsettings.json

--- a/MedioClinic/appsettings.json
+++ b/MedioClinic/appsettings.json
@@ -13,10 +13,16 @@
     }
   },
   "AllowedHosts": "*",
-  "CMSHashStringSalt": "f03b0514-268b-496c-b683-5290db4fde2b",
+  "CMSHashStringSalt": null,
   "ConnectionStrings": {
     "CMSConnectionString": null
   },
-  "CMSHashStringSalt": null
-  "CMSCIRepositoryPath": "C:\\Users\\c.susuz\\source\\repos\\MedioClinic\\CMS\\App_Data\\CIRepository"
-}
+  "CMSCIRepositoryPath": "C:\\Users\\c.susuz\\source\\repos\\MedioClinic\\CMS\\App_Data\\CIRepository",
+  "XperienceOptions": {
+    "CompanyName": "Medio Clinic",
+    "SiteCodeName": "MedioClinic",
+    "MediaLibraryOptions": {
+      "AllowedImageExtensions": [ ".gif", ".png", ".jpg", ".jpeg" ],
+      "FileSizeLimit": 4194304
+    }
+  }
